# secure-llm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  HANDOFF.md  LICENSE  MEMORY.md  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
client/: pyproject.toml
client/secure_llm_client/: __init__.py  client.py  errors.py  known_hosts.py  transport.py
client/secure_llm_client/cli/: __init__.py  __main__.py
client/secure_llm_client/crypto/: __init__.py  attestation.py  envelope.py  handshake.py  kdf.py
client/secure_llm_client/resources/: __init__.py  admin.py  chat.py  completions.py  debug.py  embeddings.py  models.py  system.py
client/tests/: test_client_construction.py  test_client_envelope.py  test_client_with_pinned_pk.py  test_known_hosts.py
docs/: _agent-context.md  operator-guide.md  protocol.md  runbook.md  threat-model.md
docs/diagrams/: component-map.html  crypto-flow.html  index.md  model-lifecycle.html  request-lifecycle.html
protocol/: pyproject.toml
protocol/secure_llm_protocol/: __init__.py  errors.py  schemas.py  version.py  wire.py
scripts/: bootstrap.sh  ensure_venv.sh  render_diagrams.py  sec_audit.sh
server/: Dockerfile  pyproject.toml
server/deploy/compose/: docker-compose.yml
server/deploy/systemd/: secure-llm.service
server/secure_llm_server/: __init__.py  config.py  health.py  lifespan.py  logging.py  main.py  metrics.py  scripts_doctor.py  scripts_pretty_log.py  scripts_smoke.py  scripts_smoke_v11.py  scripts_smoke_v12.py  sysinfo.py
server/secure_llm_server/crypto/: __init__.py  at_rest.py  attestation.py  envelope.py  handshake.py  kdf.py  keystore.py  replay.py
server/secure_llm_server/llm/: __init__.py  backend.py  streaming.py
server/secure_llm_server/middleware/: __init__.py  audit.py  rate_limit.py  request_id.py  security_headers.py  size_limit.py
server/secure_llm_server/models/: __init__.py  downloader.py  manager.py  registry.py
server/secure_llm_server/observability/: __init__.py  error_tracker.py  ring_log.py  status.py
server/secure_llm_server/routers/: _envelope_dep.py  admin.py  chat.py  completions.py  debug.py  embeddings.py  models.py  session.py  system.py
server/secure_llm_server/session/: __init__.py  manager.py  redis_store.py  store.py
server/tests/: conftest.py
server/tests/crypto_property/: test_envelope_props.py
server/tests/integration/: _helpers.py  test_admin.py  test_admin_deny_paths.py  test_attestation_handshake.py  test_chat_nonstream.py  test_chat_stream.py  test_completions.py  test_cross_tenant_terminate.py  test_debug.py  test_embeddings.py  test_envelope_errors.py  test_models.py  test_multi_tenant.py  test_sdk_surfaces.py  test_session_delete.py  test_session_router.py  test_system.py  test_transport_errors.py
server/tests/unit/: test_at_rest.py  test_attestation.py  test_config_and_health.py  test_envelope.py  test_federation.py  test_handshake.py  test_keystore.py  test_keystore_backend.py  test_log_redaction.py  test_middleware.py  test_multimodal.py  test_registry.py  test_replay.py  test_ring_log.py  test_session_manager.py  test_status_builder.py  test_streaming.py  test_wire_and_kdf.py
