[project]
name = "secure-llm-client"
version = "0.1.0"
description = "OpenAI-compatible client SDK and CLI for secure-llm"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "secure-llm-protocol",
  "httpx>=0.27",
  "pynacl>=1.5",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "tomli-w>=1.0",
]

[project.scripts]
sllm = "secure_llm_client.cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secure_llm_client"]
