[project]
name = "secure-llm-protocol"
version = "0.1.0"
description = "Wire-format schemas shared by secure-llm server and client"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secure_llm_protocol"]
