[project]
name = "secure-llm-server"
version = "0.1.0"
description = "End-to-end-encrypted LLM inference server"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "secure-llm-protocol",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "pynacl>=1.5",
  "pyrage>=1.1",
  "huggingface-hub>=0.24",
  "llama-cpp-python>=0.2.85",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "psutil>=5.9",
  "httpx>=0.27",
  "anyio>=4.4",
  "click>=8.1",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5"]

[project.scripts]
secure-llm-server = "secure_llm_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secure_llm_server"]
